Fix movie background visibility

--- a/src/index.css
+++ b/src/index.css
@@ -278,15 +278,54 @@
   
   .crypto-particles {
     position: absolute;
-    width: 4px;
-    height: 4px;
-    background: hsl(200 100% 70% / 0.3);
+    background: hsl(200 100% 70% / 0.8);
     border-radius: 50%;
     animation: particle-float 8s ease-in-out infinite;
   }
   
-  .crypto-particles:nth-child(1) { top: 10%; left: 10%; animation-delay: 0s; }
-  .crypto-particles:nth-child(2) { top: 20%; left: 80%; animation-delay: 2s; }
-  .crypto-particles:nth-child(3) { top: 70%; left: 20%; animation-delay: 4s; }
-  .crypto-particles:nth-child(4) { top: 80%; left: 70%; animation-delay: 6s; }
+  /* Different sizes of film grain particles */
+  .crypto-particles:nth-child(1) { 
+    top: 10%; left: 10%; 
+    width: 3px; height: 3px;
+    animation-delay: 0s; 
+  }
+  .crypto-particles:nth-child(2) { 
+    top: 20%; left: 80%; 
+    width: 2px; height: 2px;
+    background: hsl(200 80% 60% / 0.6);
+    animation-delay: 2s; 
+  }
+  .crypto-particles:nth-child(3) { 
+    top: 70%; left: 20%; 
+    width: 4px; height: 4px;
+    animation-delay: 4s; 
+  }
+  .crypto-particles:nth-child(4) { 
+    top: 80%; left: 70%; 
+    width: 2px; height: 2px;
+    background: hsl(200 90% 65% / 0.7);
+    animation-delay: 6s; 
+  }
+  .crypto-particles:nth-child(5) { 
+    top: 30%; left: 50%; 
+    width: 3px; height: 3px;
+    background: hsl(200 100% 70% / 0.9);
+    animation-delay: 1s; 
+  }
+  .crypto-particles:nth-child(6) { 
+    top: 60%; left: 90%; 
+    width: 2px; height: 2px;
+    animation-delay: 3s; 
+  }
+  .crypto-particles:nth-child(7) { 
+    top: 40%; left: 15%; 
+    width: 3px; height: 3px;
+    background: hsl(200 85% 65% / 0.8);
+    animation-delay: 5s; 
+  }
+  .crypto-particles:nth-child(8) { 
+    top: 90%; left: 40%; 
+    width: 2px; height: 2px;
+    animation-delay: 7s; 
+  }
 }
